update with 4 changes

--- a/note/javascript-spreads-operator.html
+++ b/note/javascript-spreads-operator.html
@@ -66,14 +66,14 @@
 </div>
 </div>
 <p>
-이 글은 <a href="javascript.html">Javascript</a>의 스프레드 연산자(Spreads Operator)에 대해 간략히 정리하는 글이다.
+이 글은 <a href="javascript.html">Javascript</a>의 스프레드 연산자(Spreads Operator)에 대해 간략히 정리하는 글이다. 당연하겠지만 ES6(ES2015) 버전을 기준으로 한다.
 </p>
 
 <div id="outline-container-2d495506" class="outline-2">
 <h2 id="2d495506">스프레드(Spreads) 연산자</h2>
 <div class="outline-text-2" id="text-2d495506">
 <p>
-스프레드 연산자는 <code>...</code> 으로 표기하며 이름처럼 펼치거나 확산한다라는 의미로 동작한다. 말로는 참 이해 안 되는 말이다. 그냥 예제를 보는 게 좋을 것 같다.
+스프레드 혹은 전개 연산자는 <code>...</code> 으로 표기하며 이름처럼 펼치거나 확산한다라는 의미로 동작한다. 말로는 참 이해 안 되는 말이다. 그냥 예제를 보는 게 좋을 것 같다.
 </p>
 
 <div class="org-src-container">
