update with 1 changes

--- a/note/javascript-spreads-operator.html
+++ b/note/javascript-spreads-operator.html
@@ -103,7 +103,7 @@
 </div>
 
 <p>
-이렇게 하면 o2에는 <code>{ familyName: "Kim", name: "James", age: 16 }</code> 이런 내용이 들어가게 된다. 원래 오브젝트의 내용에 뭔가를 추가할 대 상당히 편하게 사용할 수 있는 문법이다.
+이렇게 하면 <code>o2</code> 에는 <code>{ familyName: "Kim", name: "James", age: 16 }</code> 이런 내용이 들어가게 된다. 따라서 오브젝트의 내용에 뭔가를 대량으로 추가할 때 상당히 편하게 사용할 수 있는 문법이다.
 </p>
 
 <p>
@@ -125,7 +125,7 @@
 <h2 id="e5706333">함수 매개변수의 스프레드</h2>
 <div class="outline-text-2" id="text-e5706333">
 <p>
-스프레드의 이런 특정은 함수의 매개변수에서도 활용이 가능하다.
+스프레드의 이런 특징은 함수의 매개변수에서도 활용이 가능하다.
 </p>
 
 <div class="org-src-container">
@@ -158,7 +158,7 @@ sixArgs(...arr);
 </p>
 
 <p>
-참고로 이 경우 스프레드(Spreads)가 아니라 Rest Parameter라 불리는 것 같다.
+참고로 이 경우 스프레드(Spreads)가 아니라 나머지 매개변수(Rest Parameter)라 불리는 것 같다.
 </p>
 </div>
 </div>
