update with 7 changes

--- a/note/python.html
+++ b/note/python.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Python</h1>
-<div class="title-date">2020년 6월 28일 수정</div>
+<div class="title-date">2020년 6월 30일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -64,11 +64,6 @@
 <li><a href="#db81cb90">버전 별 정리</a></li>
 <li><a href="#73ec6cea">주제별 내용</a></li>
 <li><a href="#abdaed76">패키지 노트</a></li>
-<li><a href="#de5636e8">편리한 커맨드</a>
-<ul>
-<li><a href="#540afe19">간단한 웹 서버 띄우기</a></li>
-</ul>
-</li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
@@ -121,6 +116,7 @@
 <li><a href="python-exception-handling.html">Python 예외 처리</a></li>
 <li><a href="python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></li>
 <li><a href="python3-manual-migration.html">Python 3로 수동으로 옮겨가기</a></li>
+<li><a href="python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></li>
 </ul>
 </div>
 </div>
@@ -130,23 +126,6 @@
 <ul class="org-ul">
 <li><a href="python-bitstring.html">bitstring(Python)</a></li>
 </ul>
-</div>
-</div>
-<div id="outline-container-de5636e8" class="outline-2">
-<h2 id="de5636e8">편리한 커맨드</h2>
-<div class="outline-text-2" id="text-de5636e8">
-</div>
-<div id="outline-container-540afe19" class="outline-3">
-<h3 id="540afe19">간단한 웹 서버 띄우기</h3>
-<div class="outline-text-3" id="text-540afe19">
-<div class="org-src-container">
-<pre class="src src-bash">python -m http.server
-</pre>
-</div>
-<p>
-Python 3 부터 사용 가능한 커맨드다.
-</p>
-</div>
 </div>
 </div>
 <div id="outline-container-0bbb90e1" class="outline-2">
@@ -173,6 +152,13 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></h2>
+<div class="article-link-date">
+2020년 6월 30일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
