--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 6월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></h2>
+<div class="article-link-date">
+2020년 6월 30일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-spreads-operator.html">Javascript 스프레드 연산자</a></h2>
 <div class="article-link-date">
 2020년 6월 30일 수정</div>
@@ -85,13 +99,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-bytes-and-bytearray.html">Python의 Bytes와 Byte Array</a></h2>
-<div class="article-link-date">
-2020년 6월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
 2020년 6월 28일 수정</div>
 </div>
