--- a/note/python-simple-web-server.html
+++ b/note/python-simple-web-server.html
@@ -82,7 +82,7 @@
 </p>
 
 <div class="org-src-container">
-<pre class="src src-python">python -m http.server
+<pre class="src src-bash">python -m http.server
 </pre>
 </div>
 
@@ -95,7 +95,7 @@
 </p>
 
 <div class="org-src-container">
-<pre class="src src-python">python -m http.server <span style="color: #da8548; font-weight: bold;">3000</span> --bind <span style="color: #da8548; font-weight: bold;">127.0</span>.<span style="color: #da8548; font-weight: bold;">0.1</span>
+<pre class="src src-bash">python -m http.server <span style="color: #da8548; font-weight: bold;">3000</span> --bind 127.0.0.1
 </pre>
 </div>
 
@@ -108,7 +108,7 @@
 </p>
 
 <div class="org-src-container">
-<pre class="src src-python">python -m http.server --directory /foo/bar
+<pre class="src src-bash">python -m http.server --directory /foo/bar
 </pre>
 </div>
 
