update with 1 changes

--- a/note/python-simple-web-server.html
+++ b/note/python-simple-web-server.html
@@ -78,7 +78,7 @@
 <h2 id="49a4d41a">http.server</h2>
 <div class="outline-text-2" id="text-49a4d41a">
 <p>
-아래 <a href="cli.html">CLI</a> 커맨드 한 줄이면 현재 디렉토리의 파일을 서빙하는 HTTP 웹 서버를 띄울 수 있다.
+아래 <a href="cli.html">CLI</a> 커맨드 한 줄이면 현재 디렉터리의 파일을 서빙하는 HTTP 웹 서버를 띄울 수 있다.
 </p>
 
 <div class="org-src-container">
