update with 8 changes

--- a/note/c-language.html
+++ b/note/c-language.html
@@ -252,6 +252,13 @@ C는 저수준(?) 언어이기 때문에 복잡한 타입의 값을 복사하는
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
 <div class="article-link-date">
 2020년 6월 23일 수정</div>
