--- a/note/swift.html
+++ b/note/swift.html
@@ -368,6 +368,13 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
 <div class="article-link-date">
 2020년 6월 27일 수정</div>
