--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-simple-web-server.html">Python으로 간단한 웹 서버 띄우기</a></h2>
 <div class="article-link-date">
 2020년 6월 30일 수정</div>
@@ -141,13 +155,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
-<div class="article-link-date">
-2020년 6월 26일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
