update with 7 changes

--- a/note/javascript.html
+++ b/note/javascript.html
@@ -55,14 +55,13 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 6월 30일 수정</div>
+<div class="title-date">2020년 7월 1일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
 <li><a href="#4bf4b92b">모듈(Module)</a></li>
 <li><a href="#811ee247">튜플 비슷한 문법</a></li>
-<li><a href="#724651c9">논리식 - 동일 여부 판단</a></li>
 <li><a href="#e905cbf0">문자열(String)</a>
 <ul>
 <li><a href="#b3815f71">문자열 치환(String Interpolation)</a></li>
@@ -170,71 +169,6 @@ console.log(someValues.value2);
 <p>
 무슨 문법인지 아직 이름은 모르겠다.
 하여간 덕분에 중간 매개체 없이 교환(swap) 구현이 가능해졌다.
-</p>
-</div>
-</div>
-<div id="outline-container-724651c9" class="outline-2">
-<h2 id="724651c9">논리식 - 동일 여부 판단</h2>
-<div class="outline-text-2" id="text-724651c9">
-<p>
-자바스크립트에서 두 식이 동일한지 비교할 때는 다른 언어들과는 다르게
-두 가지 오퍼레이터 중 하나를 사용할 수 있다.
-</p>
-<div class="org-src-container">
-<pre class="src src-javascript">&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">a</span> = <span style="color: #da8548; font-weight: bold;">1</span>
-&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">b</span> = <span style="color: #98be65;">'1'</span>
-&gt; a == b
-<span style="color: #a9a1e1;">true</span>
-&gt; a === b
-<span style="color: #a9a1e1;">false</span>
-</pre>
-</div>
-<p>
-<code>==</code> 와 <code>===</code> 는 둘 다 같음을 비교하기 위한 오퍼레이터다.
-하지만 결과에 차이가 있는데, <code>==</code> 는 값(value)을 비교하기 위한 오퍼레이터고,
-<code>===</code> 는 값과 함께 타입(types)과 레퍼런스(references)도 비교하는 오퍼레이터다.
-</p>
-
-<p>
-비슷하게 같지 않다라는 의미로 <code>!=</code> 와 <code>!==</code> 가 있는데 위와 같이
-값만 비교하냐 그 외의 것들(?)도 비교하냐의 차이가 있다.
-</p>
-
-<p>
-그런데 값을 비교한다고 하는 것도 반드시 통하는 것은 아니다.
-조금 다른 예제도 보자.
-</p>
-<div class="org-src-container">
-<pre class="src src-javascript">&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">a</span> = {age: <span style="color: #da8548; font-weight: bold;">18</span>}
-&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">b</span> = {age: <span style="color: #da8548; font-weight: bold;">18</span>}
-&gt; a == b
-<span style="color: #a9a1e1;">false</span>
-&gt; a === b
-<span style="color: #a9a1e1;">false</span>
-</pre>
-</div>
-<p>
-아까와는 다른 결과에 더러운 느낌을 받는데,
-<code>==</code> 는 값을 비교하는데, 여기서는 객체의 레퍼런스를 비교한다.
-그리고 <code>a</code> 와 <code>b</code> 는 다른 레퍼런스로 만들어졌으니 둘은 다르다.
-물론 <code>===</code> 로 모든 것의 같은지 비교하는 것은 자연스럽게 거짓이 된다.
-그래서 아래와 같이 레퍼런스 대입을 사용하면 또 다른 결과를 볼 수 있다.
-</p>
-<div class="org-src-container">
-<pre class="src src-javascript">&gt; b = a
-&gt; a == b
-<span style="color: #a9a1e1;">true</span>
-&gt; a === b
-<span style="color: #a9a1e1;">true</span>
-</pre>
-</div>
-<p>
-더럽다고 느끼면 정상이다. 자바스크립트는 더럽고 치사하다.
-</p>
-
-<p>
-결과적으로 문자열과 숫자의 비교에서만 값에 의한 비교를 허용하고 있다고 볼 수 있다.
-아마도 다른 언어에 익숙하다면 매우 조심해야 할 함정이다.
 </p>
 </div>
 </div>
@@ -474,6 +408,7 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <h2 id="129c57bd">주제별 글들</h2>
 <div class="outline-text-2" id="text-129c57bd">
 <ul class="org-ul">
+<li><a href="javascript-equality.html">Javascript에서 같음을 비교하기</a></li>
 <li><a href="javascript-spreads-operator.html">Javascript 스프레드 연산자</a></li>
 <li><a href="javascript-arrow-function.html">Javascript 화살표 함수</a></li>
 </ul>
@@ -502,6 +437,13 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-spreads-operator.html">Javascript 스프레드 연산자</a></h2>
