--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 7월 1일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
 <div class="article-link-date">
 2020년 7월 1일 수정</div>
@@ -85,13 +99,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-spreads-operator.html">Javascript 스프레드 연산자</a></h2>
-<div class="article-link-date">
-2020년 6월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 6월 30일 수정</div>
 </div>
