update with 1 changes

--- a/note/javascript-equality.html
+++ b/note/javascript-equality.html
@@ -87,11 +87,11 @@
 </div>
 
 <p>
-다른 언어였다면 <code>a =</code> b= 가 참(true)이 되었다는 논리 전개에 파멸과 혼동을 느꼈을지도 모른다. 참 어이없는 식이다.
+다른 언어였다면 <code>a</code> 와 <code>b</code> 가 같다는 것이 참(true)이 되었다는 논리 전개에 파멸과 혼동을 느꼈을지도 모른다. 참 어이없는 식이다. 사실 이 정도면 컴파일 에러와 같은 문법 오류로 실행 조차 못 시키는 수준의 내용일테니까 말이다.
 </p>
 
 <p>
-하지만 <a href="javascript.html">Javascript</a>에서는 당연한 이야기고, 이미 익숙한 이들에겐 한숨나오는 이야기일지도 모르겠다.
+하지만 <a href="javascript.html">Javascript</a>에서는 당연한 이야기고 이미 익숙한 이들에겐 한숨나오는 이야기일지도 모르겠다.
 </p>
 </div>
 </div>
