--- a/note/javascript-equality.html
+++ b/note/javascript-equality.html
@@ -122,7 +122,7 @@
 </p>
 
 <p>
-하지만 결과에 차이가 있는데, <code>==</code> 는 값(value)을 비교하기 위한 오퍼레이터다. 아니 정확하게 값을 비교하는 것도 아니고 비슷한 값인지 비교를 한다. 다른 말로 느슨한 비교라고도 할 수 있다.
+하지만 결과에 차이가 있다면 뭔가 다른게 있는 것이다. 추론하자면 <code>==</code> 는 값(value)을 비교하기 위한 오퍼레이터 같다. 아니 정확하게 값을 비교하는 것도 아니고 비슷한 값인지 비교를 한다. 다른 말로 느슨한 비교라고도 할 수 있다.
 </p>
 
 <p>
