--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <meta name="og:description" content="Seorenn Home Page" />
 <link rel="canonical" href="https://seorenn.github.io/" />
 <meta property="og:url" content="https://seorenn.github.io/" />
+<link ref="alternate" type="application/atom+xml" title="Seorenn Note Feed" href="/feed.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
