--- a/note/swift.html
+++ b/note/swift.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Swift</h1>
-<div class="title-date">2020년 6월 21일 수정</div>
+<div class="title-date">2020년 7월 2일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -83,6 +83,7 @@
 <li><a href="#a05ebdeb">일부만 Import 하기</a></li>
 </ul>
 </li>
+<li><a href="#129c57bd">주제별 글들</a></li>
 <li><a href="#0bbb90e1">외부 링크</a>
 <ul>
 <li><a href="#5f6348d5">종합 가이드</a></li>
@@ -308,6 +309,14 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 </div>
 </div>
 </div>
+<div id="outline-container-129c57bd" class="outline-2">
+<h2 id="129c57bd">주제별 글들</h2>
+<div class="outline-text-2" id="text-129c57bd">
+<ul class="org-ul">
+<li><a href="swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-0bbb90e1" class="outline-2">
 <h2 id="0bbb90e1">외부 링크</h2>
 <div class="outline-text-2" id="text-0bbb90e1">
@@ -368,6 +377,27 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/annotation-vs-comment.html">Annotation VS Comment</a></h2>
 <div class="article-link-date">
 2020년 7월 1일 수정</div>
@@ -378,13 +408,6 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
 <div class="article-link-date">
 2020년 6월 27일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
-<div class="article-link-date">
-2020년 6월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -427,13 +450,6 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift-package-manager.html">Swift Package Manager</a></h2>
-<div class="article-link-date">
-2020년 6월 3일 수정</div>
 </div>
 </div>
 <div class="article-link">
