--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/apple-silicon.html">Apple Silicon</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui-property-wrappers.html">SwiftUI Property Wrappers</a></h2>
 <div class="article-link-date">
 2020년 7월 2일 수정</div>
