update with 5 changes

--- a/note/apple-silicon.html
+++ b/note/apple-silicon.html
@@ -92,7 +92,7 @@
 </p>
 
 <p>
-현재는 A12Z Bionic AP를 활용한 DTK(Developer Transition Kit)이 공개된 상태이다.
+현재는 A12Z Bionic AP를 탑재한 맥 미니를 DTK(Developer Transition Kit)라는 이름의 렌트 전용 제품으로 공개한 상태이다.
 </p>
 </div>
 </div>
