update with 4 changes

--- a/note/apple-silicon.html
+++ b/note/apple-silicon.html
@@ -68,14 +68,14 @@
 </div>
 </div>
 <p>
-<a href="apple.html">애플</a>이 <a href="wwdc2020.html">WWDC20</a>에서 예상대로 ARM 으로의 전환을 하겠다고 공식적으로 발표했다 거기서 바로 이 애플 실리콘(Apple Silicon)이라는 이름이 등장했다.
+<a href="apple.html">애플</a>이 <a href="wwdc2020.html">WWDC20</a>에서 예상대로 ARM 으로의 전환을 하겠다고 공식적으로 발표했다. 그 자리에서 이 애플 실리콘(Apple Silicon)이라는 이름이 등장했다.
 </p>
 
 <div id="outline-container-720c44a4" class="outline-2">
 <h2 id="720c44a4">Apple Silicon</h2>
 <div class="outline-text-2" id="text-720c44a4">
 <p>
-<a href="apple.html">애플</a>의 ARM SoC 혹은 ARM 아키텍처를 탑재한 모바일 AP의 상품명이다. <a href="wwdc2020.html">WWDC20</a>부터 이렇게 부르기 시작했다.
+애플 실리콘(Apple Silicon)은 <a href="apple.html">애플</a>의 ARM SoC 혹은 ARM 아키텍처를 탑재한 모바일 AP의 상품명이다. <a href="wwdc2020.html">WWDC20</a>부터 이렇게 부르기 시작했다.
 </p>
 
 <p>
