update with 6 changes

--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/promise.html">Javascript Promise 정리</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/apple-silicon.html">Apple Silicon</a></h2>
 <div class="article-link-date">
 2020년 7월 2일 수정</div>
@@ -99,13 +113,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
-<div class="article-link-date">
-2020년 7월 1일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 7월 1일 수정</div>
 </div>
@@ -708,13 +715,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/html.html">HTML</a></h2>
-<div class="article-link-date">
-2020년 5월 20일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/promise.html">Promise</a></h2>
 <div class="article-link-date">
 2020년 5월 20일 수정</div>
 </div>
