--- a/note/javascript.html
+++ b/note/javascript.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 7월 1일 수정</div>
+<div class="title-date">2020년 7월 2일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -411,6 +411,7 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <li><a href="javascript-equality.html">Javascript에서 같음을 비교하기</a></li>
 <li><a href="javascript-spreads-operator.html">Javascript 스프레드 연산자</a></li>
 <li><a href="javascript-arrow-function.html">Javascript 화살표 함수</a></li>
+<li><a href="promise.html">Javascript Promise 정리</a></li>
 </ul>
 </div>
 </div>
@@ -437,6 +438,13 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/promise.html">Javascript Promise 정리</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript-equality.html">Javascript에서 같음을 비교하기</a></h2>
@@ -503,13 +511,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/html.html">HTML</a></h2>
-<div class="article-link-date">
-2020년 5월 20일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/promise.html">Promise</a></h2>
 <div class="article-link-date">
 2020년 5월 20일 수정</div>
 </div>
