--- a/note/promise.html
+++ b/note/promise.html
@@ -6,12 +6,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>Promise - Seorenn Note</title>
-<meta name="twitter:title" content="Promise" />
-<meta name="og:title" content="Promise" />
-<meta name="description" content="자바스크립트(Javascript)의 Promise 객체와 async, await에 대해 정리하는 글" />
-<meta name="twitter:description" content="자바스크립트(Javascript)의 Promise 객체와 async, await에 대해 정리하는 글" />
-<meta name="og:description" content="자바스크립트(Javascript)의 Promise 객체와 async, await에 대해 정리하는 글" />
+<title>Javascript Promise 정리 - Seorenn Note</title>
+<meta name="twitter:title" content="Javascript Promise 정리" />
+<meta name="og:title" content="Javascript Promise 정리" />
+<meta name="description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
+<meta name="twitter:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
+<meta name="og:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
 <link rel="canonical" href="https://seorenn.github.io/note/promise.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/promise.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -54,8 +54,8 @@
 </div>
 <section class="content">
 <header>
-<h1>Promise</h1>
-<div class="title-date">2020년 5월 20일 수정</div>
+<h1>Javascript Promise 정리</h1>
+<div class="title-date">2020년 7월 2일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -194,6 +194,16 @@ async는 비동기로 실행시킬 함수나 익명 함수 선언 앞에 붙일 
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 7월 2일 수정</div>
+</div>
+</div>
 </div>
 </section>
 <div class="side-ad-container">
