update with 5 changes

--- a/note/promise.html
+++ b/note/promise.html
@@ -6,9 +6,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>Javascript Promise 정리 - Seorenn Note</title>
-<meta name="twitter:title" content="Javascript Promise 정리" />
-<meta name="og:title" content="Javascript Promise 정리" />
+<title>Javascript Promise - Seorenn Note</title>
+<meta name="twitter:title" content="Javascript Promise" />
+<meta name="og:title" content="Javascript Promise" />
 <meta name="description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
 <meta name="twitter:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
 <meta name="og:description" content="자바스크립트의 Promise 객체와 async, await에 대해 정리해보자" />
@@ -54,7 +54,7 @@
 </div>
 <section class="content">
 <header>
-<h1>Javascript Promise 정리</h1>
+<h1>Javascript Promise</h1>
 <div class="title-date">2020년 7월 2일 수정</div>
 </header>
 <div id="table-of-contents">
