--- a/note/javascript.html
+++ b/note/javascript.html
@@ -411,7 +411,7 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <li><a href="javascript-equality.html">Javascript에서 같음을 비교하기</a></li>
 <li><a href="javascript-spreads-operator.html">Javascript 스프레드 연산자</a></li>
 <li><a href="javascript-arrow-function.html">Javascript 화살표 함수</a></li>
-<li><a href="promise.html">Javascript Promise 정리</a></li>
+<li><a href="promise.html">Javascript Promise</a></li>
 </ul>
 </div>
 </div>
@@ -440,7 +440,7 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/promise.html">Javascript Promise 정리</a></h2>
+<h2><a class="article-link-title" href="/note/promise.html">Javascript Promise</a></h2>
 <div class="article-link-date">
 2020년 7월 2일 수정</div>
 </div>
