update with 5 changes

--- a/note/javascript-equality.html
+++ b/note/javascript-equality.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Javascript에서 같음을 비교하기</h1>
-<div class="title-date">2020년 7월 1일 수정</div>
+<div class="title-date">2020년 7월 2일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -68,7 +68,7 @@
 </div>
 </div>
 <p>
-이 글은 <a href="javascript.html">Javascript</a>의 최악의 모호성으로 평가받는 같음(equality)을 비교하는 것에 관한 글이다.
+이 글은 <a href="javascript.html">Javascript</a>의 최악의 모호성으로 평가받는 같음(equality)을 비교하는 것에 관한 글이다. 다만 다른 언어에 익숙하다는 전제가 있어야 이해가 가능할지도 모르겠다.
 </p>
 
 <div id="outline-container-37cbeae7" class="outline-2">
@@ -252,7 +252,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
-2020년 7월 1일 수정</div>
+2020년 7월 2일 수정</div>
 </div>
 </div>
 </div>
